docs/examples/certificate/http/ing-tls-acme.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"voyager.appscode.com/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"test-ingress","namespace":"default"},"spec":{"rules":[{"host":"kiteci.com","http":{"paths":[{"backend":{"serviceName":"web","servicePort":80},"path":"/"}]}}]}}
  clusterName: ""
  creationTimestamp: 2017-10-29T22:01:39Z
  generation: 0
  name: test-ingress
  namespace: default
  resourceVersion: "1483"
  selfLink: /apis/voyager.appscode.com/v1beta1/namespaces/default/ingresses/test-ingress
  uid: bdc1b8eb-bcf4-11e7-bc3f-42010a800fd5
spec:
  resources: {}
  rules:
  - http:
      nodePort: 0
      paths:
      - backend:
          serviceName: voyager-operator.kube-system
          servicePort: 56791
        path: /.well-known/acme-challenge/
      port: 0
  - host: kiteci.com
    http:
      nodePort: 0
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
      port: 0
  tls:
  - hosts:
    - kiteci.com
    ref:
      kind: Certificate
      name: kitecicom
status:
  loadBalancer:
    ingress:
    - ip: 104.198.234.66
