docs/examples/certificate/http/ing-with-acme-path.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"voyager.appscode.com/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"test-ingress","namespace":"default"},"spec":{"rules":[{"host":"kiteci.com","http":{"paths":[{"backend":{"serviceName":"web","servicePort":80},"path":"/"}]}}]}}
  clusterName: ""
  creationTimestamp: 2017-10-29T19:55:53Z
  generation: 0
  name: test-ingress
  namespace: default
  resourceVersion: "1336"
  selfLink: /apis/voyager.appscode.com/v1beta1/namespaces/default/ingresses/test-ingress
  uid: 2b6ec30d-bce3-11e7-a855-42010a800268
spec:
  resources: {}
  rules:
  - http:
      nodePort: 0
      paths:
      - backend:
          serviceName: voyager-operator.kube-system
          servicePort: 56791
        path: /.well-known/acme-challenge/
      port: 0
  - host: kiteci.com
    http:
      nodePort: 0
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
      port: 0
status:
  loadBalancer:
    ingress:
    - ip: 35.202.41.55
